fixed spacing and responsiveness issues

--- a/css/custom-theme.css
+++ b/css/custom-theme.css
@@ -115,16 +115,14 @@
 
     .card-img-top {
         padding: 10px 10px 0px 10px;
-        width: 300px;
-        height: 300px;
         background-color: white;
         object-fit: contain;
+        height: 250px;
+        width: 100%;
     }
 
     .product-card {
         background-color: #e7e7e7;
-        width: 300px;
-        height: 500px;
         margin: 5px;
         text-align: center;
         border: none;
@@ -133,6 +131,8 @@
     .card-body {
         padding-bottom: 70px;
         box-sizing: border-box;
+        height: 250px;
+        width: 100%;
     }
 
     .btn.add-to-cart {
